tests/ui/traits/next-solver/cycles/coinduction/incompleteness-unstable-result.with.stderr
error[E0277]: the trait bound `A<X>: Trait<_, _, _>` is not satisfied
  --> $DIR/incompleteness-unstable-result.rs:66:19
   |
LL |     impls_trait::<A<X>, _, _, _>();
   |                   ^^^^ the trait `Trait<_, _, _>` is not implemented for `A<X>`
   |
   = help: the trait `Trait<U, V, D>` is implemented for `A<T>`
note: required for `A<X>` to implement `Trait<_, _, _>`
  --> $DIR/incompleteness-unstable-result.rs:34:18
   |
LL | impl<T, U, V, D> Trait<U, V, D> for A<T>
   |                  ^^^^^^^^^^^^^^     ^^^^
...
LL |     A<T>: Trait<U, D, V>,
   |           -------------- unsatisfied trait bound introduced here
   = note: 8 redundant requirements hidden
   = note: required for `A<X>` to implement `Trait<_, _, _>`
note: required by a bound in `impls_trait`
  --> $DIR/incompleteness-unstable-result.rs:53:19
   |
LL | fn impls_trait<T: Trait<U, V, D>, U, V, D>() {}
   |                   ^^^^^^^^^^^^^^ required by this bound in `impls_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
